@@ -1,3 +1,7 @@
+2002-02-01  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* stack.cpp: Implement eps_at and mu_at.
+
 2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* expression.h: Add support for slab matrix cache.
